# multi-agent-linkedin-post

projeto_gerador_post_tec_linkedin/: README.md  pyproject.toml
projeto_gerador_post_tec_linkedin/output/: texto.txt
projeto_gerador_post_tec_linkedin/src/projeto_gerador_post_tec_linkedin/: crew.py  main.py
projeto_gerador_post_tec_linkedin/src/projeto_gerador_post_tec_linkedin/config/: agents.yaml  tasks.yaml
