[project]
name = "projeto_gerador_post_tec_linkedin"
version = "0.1.0"
description = "projeto_gerador_post_tec_linkedin using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
projeto_gerador_post_tec_linkedin = "projeto_gerador_post_tec_linkedin.main:run"
run_crew = "projeto_gerador_post_tec_linkedin.main:run"
train = "projeto_gerador_post_tec_linkedin.main:train"
replay = "projeto_gerador_post_tec_linkedin.main:replay"
test = "projeto_gerador_post_tec_linkedin.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
